[gd_scene load_steps=2 format=3 uid="uid://bnu2nqid68ge8"]

[ext_resource type="Script" uid="uid://c6abkf7hblcos" path="res://scripts/settings_menu.gd" id="1_05p07"]

[node name="settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05p07")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -112.0
offset_right = 173.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -79.0
offset_right = 121.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="fog" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "туман"

[node name="bloom" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "свечение"

[node name="back_to_menu" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Назад"

[connection signal="toggled" from="Panel/VBoxContainer/fog" to="." method="_on_fog_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/bloom" to="." method="_on_bloom_toggled"]
[connection signal="pressed" from="back_to_menu" to="." method="_on_back_to_menu_pressed"]
